--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="335dp"
+                android:layout_width="373dp"
                 android:layout_height="121dp"
                 android:layout_marginTop="18dp"
                 android:adjustViewBounds="true"
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="FOOD APP"
+                android:text="Đăng Nhập"
                 android:textColor="@color/blue_gray"
                 android:textSize="28sp"
                 android:textStyle="bold" />
@@ -66,7 +66,7 @@
                 android:background="@drawable/editext_background"
                 android:drawableLeft="@android:drawable/ic_lock_lock"
                 android:drawablePadding="10dp"
-                android:hint="Password"
+                android:hint="Mật khẩu"
                 android:inputType="textPassword"
                 android:padding="8dp"
                 android:text="@={auth.password}"
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Forget Password?"
+                android:text="Quên mật khẩu?"
                 android:textAlignment="center"
                 android:textSize="16sp" />
 
@@ -88,7 +88,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/red_button_background"
                 android:onClick="@{() -> auth.login()}"
-                android:text="Login"
+                android:text="Đăng nhập"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 android:textStyle="bold" />
@@ -154,7 +154,7 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Don't have an account yet? "
+                    android:text="Chưa có tài khoản? "
                     android:textColor="@color/blue_gray"
                     android:textSize="16sp" />
 
@@ -162,7 +162,7 @@
                     android:id="@+id/tvRegister"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sign Up"
+                    android:text="Đăng kí ngay"
                     android:textColor="@color/red"
                     android:textSize="16sp" />
             </LinearLayout>
