--- a/android/app/src/main/res/layout/fragment_search.xml
+++ b/android/app/src/main/res/layout/fragment_search.xml
@@ -25,7 +25,7 @@
         android:completionThreshold="1"
         android:drawableStart="@android:drawable/ic_menu_search"
         android:drawablePadding="8dp"
-        android:hint="Search for food..."
+        android:hint="Tìm kiếm ..."
         android:padding="12dp" />
 
     <com.google.android.material.chip.ChipGroup
