--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="windowSplashScreenAnimationDuration">300</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.AppFoodOrder</item>
     </style>
+
     <style name="Theme.AppFoodOrder" parent="Base.Theme.AppFoodOrder" />
 
     <style name="textStyle" parent="Widget.AppCompat.TextView">
@@ -21,5 +22,10 @@
         <item name="android:textColor">@color/blue_gray</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ThemeOverlay.AppFoodOrder.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
     </style>
 </resources>
