--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -159,14 +159,15 @@
             app:layout_constraintTop_toBottomOf="@id/options_title">
 
             <LinearLayout
+                android:id="@+id/layoutOrder"
                 style="@style/ProfileItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                android:paddingVertical="12dp"
-                android:paddingHorizontal="16dp">
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="12dp">
 
                 <ImageView
                     android:layout_width="24dp"
