--- a/android/app/src/main/res/layout/fragment_pending_order.xml
+++ b/android/app/src/main/res/layout/fragment_pending_order.xml
@@ -2,31 +2,51 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".ui.fragment.PendingOrdersFragment">
-
-    <!-- RecyclerView to display orders -->
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="20dp"
-        android:text="Đơn chờ xử lý"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/recyclerViewPendingOrders"
-        app:layout_constraintStart_toStartOf="parent" />
+    android:background="#E7E6E6">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPendingOrders"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="604dp"
+        android:layout_height="match_parent"
+        android:padding="8dp"
+        android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/noOrdersLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="271dp"
+            android:layout_height="188dp"
+            android:src="@drawable/ic_no_orders" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Quên chưa đặt món rồi nè bạn ơi?"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Bạn sẽ nhìn thấy các món đang được chuẩn bị hoặc giao đi tại đây để kiểm tra đơn hàng nhanh hơn!"
+            android:textAlignment="center"
+            android:textSize="14sp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
