--- a/android/app/src/main/res/layout/activity_order_detail.xml
+++ b/android/app/src/main/res/layout/activity_order_detail.xml
@@ -244,14 +244,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
-                    android:backgroundTint="#FFFFFF"
                     android:enabled="false"
                     android:visibility="gone"
                     android:text="Đã đánh giá"
                     android:textColor="#A49595"
                     app:cornerRadius="3dp"
                     app:strokeColor="#AFA5A5"
-                    app:strokeWidth="3dp" />
+                    app:strokeWidth="3dp"
+                    android:backgroundTint="#FFFFFF" />
 
                 <Button
                     android:id="@+id/btnReorder"
