Update UI item_cart.xml, tab status history v1

--- a/android/app/src/main/res/layout/fragment_history_orders.xml
+++ b/android/app/src/main/res/layout/fragment_history_orders.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#E7E6E6"
-    tools:context=".ui.fragment.HistoryOrdersFragment">
+    tools:context=".ui.fragment.tabstatus.HistoryOrdersFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHistoryOrders"
         android:layout_width="match_parent"
