--- a/android/app/src/main/res/layout/activity_order_status.xml
+++ b/android/app/src/main/res/layout/activity_order_status.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.OrderStatusActivity">
+    tools:context=".ui.activity.order.OrderStatusActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tbLayOrderStatus"
